c4 sidebar spacing fix

--- a/portfolio/connect4/connect4.css
+++ b/portfolio/connect4/connect4.css
@@ -63,7 +63,7 @@ body {
 .sidebar {
 	display: inline-block;
 	float: right;
-	width: 15%;
+	width: 13%;
 	border: solid 1px black;
 	margin: 10% 10% 0 0;
 	border-radius: 15%;
